--- a/_about/board-members.html
+++ b/_about/board-members.html
@@ -10,10 +10,44 @@ order: 1
 </p>
 
 
+{% assign president = site.board_members | where: "position", "President" | first %}
+{% assign vice_president = site.board_members | where: "position", "Vice President" | first %}
+{% assign secretary = site.board_members | where: "position", "Secretary" | first %}
+{% assign treasurer = site.board_members | where: "position", "Treasurer" | first %}
+
+{% assign other_members = site.board_members |
+   reject: "position", "President" |
+   reject: "position", "Vice President" |
+   reject: "position", "Secretary" |
+   reject: "position", "Treasurer"
+%}
+
+
 <h1>Our Board</h1>
-{% for member in site.board_members -%}
   <div class="board-member-list-item">
-    <img src="/assets/images/about/board-members/{{member.image_name}}" alt_text={{page.name}} width=300 aspect-ratio="1 / 1" padding="10px" />
-    <a href={{member.url}}>{{ member.name }}</a>
+    <img src="/assets/images/about/board-members/{{ president.image_name }}" alt="{{ president.name }}" width="300" aspect-ratio="1 / 1" padding="10px" />
+    <a href="{{ president.url }}">{{ president.name }} - {{ president.position }}</a>
   </div>
-{% endfor %}
+  <div class="board-member-list-item">
+    <img src="/assets/images/about/board-members/{{ vice_president.image_name }}" alt="{{ vice_president.name }}" width="300" aspect-ratio="1 / 1" padding="10px" />
+    <a href="{{ vice_president.url }}">{{ vice_president.name }} - {{ vice_president.position }}</a>
+  </div>
+  <div class="board-member-list-item">
+    <img src="/assets/images/about/board-members/{{ secretary.image_name }}" alt="{{ secretary.name }}" width="300" aspect-ratio="1 / 1" padding="10px" />
+    <a href="{{ secretary.url }}">{{ secretary.name }} - {{ secretary.position }}</a>
+  </div>
+  <div class="board-member-list-item">
+    <img src="/assets/images/about/board-members/{{ treasurer.image_name }}" alt="{{ treasurer.name }}" width="300" aspect-ratio="1 / 1" padding="10px" />
+    <a href="{{ treasurer.url }}">{{ treasurer.name }} - {{ treasurer.position }}</a>
+  </div>
+  {% for member in other_members -%}
+    <div class="board-member-list-item">
+      <img src="/assets/images/about/board-members/{{member.image_name}}" alt_text={{page.name}} width=300 aspect-ratio="1 / 1" padding="10px" />
+      <a href={{member.url}}>{{ member.name }}
+        {% if member.position %}
+          - {{ member.position }}
+        {% endif %}
+      </a>
+    </div>
+  {% endfor %}
+</div>
