--- a/_about/board-members.html
+++ b/_about/board-members.html
@@ -25,24 +25,34 @@ order: 1
 
 <h1>Our Board</h1>
   <div class="board-member-list-item">
-    <img src="/assets/images/about/board-members/{{ president.image_name }}" alt="{{ president.name }}" width="300" aspect-ratio="1 / 1" padding="10px" />
+    <a href="{{ president.url }}">
+      <img src="/assets/images/about/board-members/{{ president.image_name }}" alt="{{ president.name }}" width="300" aspect-ratio="1 / 1" padding="10px" />
+    </a>
     <a href="{{ president.url }}">{{ president.name }} - {{ president.position }}</a>
   </div>
   <div class="board-member-list-item">
-    <img src="/assets/images/about/board-members/{{ vice_president.image_name }}" alt="{{ vice_president.name }}" width="300" aspect-ratio="1 / 1" padding="10px" />
+    <a href="{{ vice_president.url }}">
+      <img src="/assets/images/about/board-members/{{ vice_president.image_name }}" alt="{{ vice_president.name }}" width="300" aspect-ratio="1 / 1" padding="10px" />
+    </a>
     <a href="{{ vice_president.url }}">{{ vice_president.name }} - {{ vice_president.position }}</a>
   </div>
   <div class="board-member-list-item">
-    <img src="/assets/images/about/board-members/{{ secretary.image_name }}" alt="{{ secretary.name }}" width="300" aspect-ratio="1 / 1" padding="10px" />
+    <a href="{{ secretary.url }}">
+      <img src="/assets/images/about/board-members/{{ secretary.image_name }}" alt="{{ secretary.name }}" width="300" aspect-ratio="1 / 1" padding="10px" />
+    </a>
     <a href="{{ secretary.url }}">{{ secretary.name }} - {{ secretary.position }}</a>
   </div>
   <div class="board-member-list-item">
-    <img src="/assets/images/about/board-members/{{ treasurer.image_name }}" alt="{{ treasurer.name }}" width="300" aspect-ratio="1 / 1" padding="10px" />
+    <a href="{{ treasurer.url }}">
+      <img src="/assets/images/about/board-members/{{ treasurer.image_name }}" alt="{{ treasurer.name }}" width="300" aspect-ratio="1 / 1" padding="10px" />
+    </a>
     <a href="{{ treasurer.url }}">{{ treasurer.name }} - {{ treasurer.position }}</a>
   </div>
   {% for member in other_members -%}
     <div class="board-member-list-item">
-      <img src="/assets/images/about/board-members/{{member.image_name}}" alt_text={{page.name}} width=300 aspect-ratio="1 / 1" padding="10px" />
+      <a href={{member.url}}>
+        <img src="/assets/images/about/board-members/{{member.image_name}}" alt_text{{page.name}} width=300 aspect-ratio="1 / 1" padding="10px" />
+      </a>
       <a href={{member.url}}>{{ member.name }}</a>
     </div>
   {% endfor %}
